fix horizontal scroll and style btn

--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@
     src: url(/assets/Fonts/BOOKOSI.TTF);
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+* { 
+    box-sizing: border-box;
+ }
+
 body {
     font-family: Bookosi;
 }
@@ -25,6 +34,11 @@ a {
 
 a:hover {
     color: rgb(125, 125, 125);
+}
+
+.custom-btn {
+    max-width: 75%;
+    margin: auto;
 }
 
 .title-0 {
